// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Location Details Screen Renders Location Details Screen with Mock Data 1`] = `
<View>
  <LocationHeader
    details="2 [missing \\"en.LOCATION.ITEMS\\" translation], 3 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] ABAR2-1"
  />
</View>
`;

exports[`Test Location Details Screen Renders Location Details Screen with Mock Empty Data 1`] = `
<View>
  <LocationHeader
    details="0 [missing \\"en.LOCATION.ITEMS\\" translation], 0 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] ABAR2-1"
  />
</View>
`;

exports[`Test Location Details Screen Renders Location Details Screen with Mock Large Location Data 1`] = `
<View>
  <LocationHeader
    details="100 [missing \\"en.LOCATION.ITEMS\\" translation], 100 [missing \\"en.LOCATION.PALLETS\\" translation]"
    location="[missing \\"en.LOCATION.SECTION\\" translation] ABAR2-1"
  />
</View>
`;
